[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Characters/LoSpalmer/crouch/crouch1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Characters/LoSpalmer/idle/idle2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/LoSpalmer/idle/idle1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/LoSpalmer/walk/walk1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Characters/LoSpalmer/run/run1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Characters/LoSpalmer/idle/idle3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Characters/LoSpalmer/run/run3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Characters/LoSpalmer/run/run8.png" type="Texture" id=8]
[ext_resource path="res://Assets/Characters/LoSpalmer/jump/jump1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Characters/LoSpalmer/run/run7.png" type="Texture" id=10]
[ext_resource path="res://Assets/Characters/LoSpalmer/run/run6.png" type="Texture" id=11]
[ext_resource path="res://Assets/Characters/LoSpalmer/run/run2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Characters/LoSpalmer/walk/walk2.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Characters/Player.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Characters/AnimatedSprite.gd" type="Script" id=15]
[ext_resource path="res://Assets/Characters/LoSpalmer/dash/dash.png" type="Texture" id=16]
[ext_resource path="res://Assets/Characters/LoSpalmer/hang_on_wall/hang.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Characters/PlayerState.tscn" type="PackedScene" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "hang",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 25.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 14 )
running_speed = 500
gravity = 1000

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"
script = ExtResource( 15 )

[node name="PlayerState" parent="." instance=ExtResource( 18 )]

[node name="PlatformDetectorRayCast" type="RayCast2D" parent="."]
position = Vector2( 2, 254 )
scale = Vector2( 3, 3 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true
